[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://scenes/dynamic_background.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/Aldrich/Aldrich-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://themes/simple_gui.tres" type="Theme" id=4]
[ext_resource path="res://scenes/equation_displayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/end_game_screen.tscn" type="PackedScene" id=6]
[ext_resource path="res://sounds/sfx/lowThreeTone.ogg" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 74
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="dynamic_background" parent="." instance=ExtResource( 2 )]
pause_mode = 2

[node name="timer" type="Timer" parent="."]
pause_mode = 1

[node name="canvas_layer" type="CanvasLayer" parent="."]

[node name="start_button" type="Button" parent="canvas_layer"]
pause_mode = 1
margin_left = 152.0
margin_top = 224.0
margin_right = 414.0
margin_bottom = 300.0
theme = SubResource( 2 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_container" type="HBoxContainer" parent="canvas_layer"]
pause_mode = 1
margin_left = 328.0
margin_top = 24.0
margin_right = 554.0
margin_bottom = 67.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_head_label" type="Label" parent="canvas_layer/score_container"]
margin_top = 6.0
margin_right = 107.0
margin_bottom = 37.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.615686, 0.0784314, 0.619608, 1 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_label" type="Label" parent="canvas_layer/score_container"]
margin_left = 111.0
margin_top = 6.0
margin_right = 226.0
margin_bottom = 37.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.486275, 0.0666667, 0.329412, 1 )
text = "00000"

[node name="timer_container" type="HBoxContainer" parent="canvas_layer"]
pause_mode = 1
margin_left = 24.0
margin_top = 30.0
margin_right = 181.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer_head_container" type="Label" parent="canvas_layer/timer_container"]
margin_top = 4.0
margin_right = 86.0
margin_bottom = 35.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.615686, 0.0784314, 0.619608, 1 )
text = "Time:"

[node name="timer_label" type="Label" parent="canvas_layer/timer_container"]
margin_left = 90.0
margin_top = 4.0
margin_right = 157.0
margin_bottom = 35.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.643137, 0.0509804, 0.0509804, 1 )
text = "300"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equation_displayer" parent="canvas_layer" instance=ExtResource( 5 )]
pause_mode = 1
visible = false
margin_left = 120.0
margin_top = 128.0
margin_right = 160.0
margin_bottom = 168.0

[node name="end_game_screen" parent="canvas_layer" instance=ExtResource( 6 )]
pause_mode = 1
visible = false
margin_left = 120.0
margin_top = 128.0
margin_right = 120.0
margin_bottom = 171.0

[node name="audio_stream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
